# libfwkeyfetch

./: .gitignore  Makefile.am  configure.ac  libfwkeyfetch.pc.in
.github/workflows/: main.yml
include/: Makefile.am
include/libfwkeyfetch/: libfwkeyfetch.hpp
libfwkeyfetch/: Makefile.am  libfwkeyfetch.cpp  main.cpp
libfwkeyfetch.xcodeproj/: project.pbxproj
